css: Fixed <textarea> spacing below element

--- a/src/plugin/system/files/css/form.css
+++ b/src/plugin/system/files/css/form.css
@@ -165,6 +165,9 @@ textarea {
     font-size: inherit;
     line-height: 1.5;
 }
+textarea {
+    vertical-align: top; /* Removes extra spacing at bottom of element */
+}
 input:not([type="checkbox"]):not([type="radio"]) {
     height: 2em;
 }
